fixed horizontal scrolling issue

--- a/assets/www/css/timetracker.css
+++ b/assets/www/css/timetracker.css
@@ -15,7 +15,6 @@ h1 {
 
 ol.taskList{
     list-style: none;
-    width:100%;
     background-color: #aaaaaa;
     padding: 0px;
     -webkit-border-radius:8px;
@@ -31,6 +30,11 @@ ol.taskList li{
     margin: 4px 0px 4px 0px;
     cursor: pointer;
     -webkit-border-radius: 8px;
+}
+
+ol.taskList li p{
+    padding: 0px;
+    margin: 0px;
 }
 
 ol.taskList li a{
